--- a/ESC_Board_Telemetry/ESC_Board_TLM.ioc
+++ b/ESC_Board_Telemetry/ESC_Board_TLM.ioc
@@ -98,7 +98,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -140,12 +140,12 @@ TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload
-TIM3.Period=500 - 1
-TIM3.Prescaler=160 - 1
-TIM3.Pulse-PWM\ Generation1\ CH1=75
-TIM3.Pulse-PWM\ Generation2\ CH2=75
-TIM3.Pulse-PWM\ Generation3\ CH3=75
-TIM3.Pulse-PWM\ Generation4\ CH4=75
+TIM3.Period=1500 - 1
+TIM3.Prescaler=32 - 1
+TIM3.Pulse-PWM\ Generation1\ CH1=375
+TIM3.Pulse-PWM\ Generation2\ CH2=375
+TIM3.Pulse-PWM\ Generation3\ CH3=375
+TIM3.Pulse-PWM\ Generation4\ CH4=375
 USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,VirtualMode-Asynchronous,Mode
 USART1.Mode=MODE_RX
