--- a/ESC_Board_Telemetry/ESC_Board_TLM.ioc
+++ b/ESC_Board_Telemetry/ESC_Board_TLM.ioc
@@ -26,20 +26,19 @@ Mcu.IPNb=9
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
-Mcu.Pin1=PA4
-Mcu.Pin10=PA15
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin2=PA6
-Mcu.Pin3=PA7
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=14
+Mcu.Pin1=PA6
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin2=PA7
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=PA15
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=NUM_ADC_INIT_WAIT_MS,500;TLM_PACKET_ARRIVAL_MS,10
 Mcu.UserName=STM32F042K6Tx
@@ -70,9 +69,6 @@ PA12.Mode=Master
 PA12.Signal=CAN_TX
 PA15.Locked=true
 PA15.Signal=GPIO_Output
-PA4.Locked=true
-PA4.Mode=IN4
-PA4.Signal=ADC_IN4
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
@@ -98,7 +94,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
