--- a/ESC_Board_Telemetry/ESC_Board_TLM.ioc
+++ b/ESC_Board_Telemetry/ESC_Board_TLM.ioc
@@ -10,19 +10,31 @@ CAN.NART=DISABLE
 CAN.Prescaler=4
 CAN.SJW=CAN_SJW_1TQ
 CAN.TXFP=DISABLE
+Dma.Request0=TIM3_CH1/TRIG
+Dma.RequestsNb=1
+Dma.TIM3_CH1/TRIG.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM3_CH1/TRIG.0.Instance=DMA1_Channel4
+Dma.TIM3_CH1/TRIG.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH1/TRIG.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH1/TRIG.0.Mode=DMA_NORMAL
+Dma.TIM3_CH1/TRIG.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM3_CH1/TRIG.0.PeriphInc=DMA_PINC_ENABLE
+Dma.TIM3_CH1/TRIG.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH1/TRIG.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=CAN
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=TIM14
-Mcu.IP7=TIM16
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP2=DMA
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IP7=TIM14
+Mcu.IP8=TIM16
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
@@ -47,6 +59,7 @@ MxCube.Version=6.0.0
 MxDb.Version=DB.6.0.0
 NVIC.ADC1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.CEC_CAN_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.DMA1_Channel4_5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -98,7 +111,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -111,7 +124,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CAN_Init-CAN-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_TIM16_Init-TIM16-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_ADC_Init-ADC-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM14_Init-TIM14-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
 RCC.HSICECFreq_Value=32786.88524590164
