--- a/ESC_Board_Telemetry/ESC_Board_TLM.ioc
+++ b/ESC_Board_Telemetry/ESC_Board_TLM.ioc
@@ -55,6 +55,7 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Locked=true
 PA0.Mode=IN0
@@ -139,13 +140,14 @@ TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload,TIM_MasterOutputTrigger
 TIM3.Period=1500 - 1
 TIM3.Prescaler=32 - 1
 TIM3.Pulse-PWM\ Generation1\ CH1=375
 TIM3.Pulse-PWM\ Generation2\ CH2=375
 TIM3.Pulse-PWM\ Generation3\ CH3=375
 TIM3.Pulse-PWM\ Generation4\ CH4=375
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART1.BaudRate=115200
 USART1.IPParameters=BaudRate,VirtualMode-Asynchronous,Mode
 USART1.Mode=MODE_RX
